@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.oracle.oci.sdk</groupId>
   <artifactId>oci-java-sdk</artifactId>
-  <version>2.22.0</version>
+  <version>2.23.0</version>
   <packaging>pom</packaging>
   <name>Oracle Cloud Infrastructure SDK</name>
   <description>This project contains the SDK used for Oracle Cloud Infrastructure</description>
@@ -34,7 +34,9 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javax.annotation.version>1.3.2</javax.annotation.version>
     <jackson.version>2.13.1</jackson.version>
+    <jackson.databind.version>2.13.2.1</jackson.databind.version>
     <jersey.version>2.35</jersey.version>
     <apache-httpcomponents.version>4.5.13</apache-httpcomponents.version>
     <guava.version>31.0.1-jre</guava.version>
@@ -238,6 +240,20 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>active-on-jdk-17-and-above</id>
+      <activation>
+        <jdk>[17,</jdk>
+      </activation>
+      <properties>
+        <argLine>
+          --add-opens=java.base/java.lang=ALL-UNNAMED
+          --add-opens=java.base/java.util=ALL-UNNAMED
+          --add-opens=java.base/java.net=ALL-UNNAMED
+          --add-opens=java.base/java.nio.channels=ALL-UNNAMED
+        </argLine>
+      </properties>
+    </profile>
   </profiles>
   <build>
     <pluginManagement>
@@ -434,6 +450,11 @@
     </pluginManagement>
     <plugins>
       <plugin>
+        <groupId>com.googlecode.maven-download-plugin</groupId>
+        <artifactId>download-maven-plugin</artifactId>
+        <version>1.6.8</version>
+      </plugin>
+      <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
       <plugin>
@@ -501,6 +522,11 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>${javax.annotation.version}</version>
     </dependency>
     <!-- Direct dependencies -->
     <dependency>
@@ -575,7 +601,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson.databind.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.jaxrs</groupId>
